# finquant

./: .gitignore  README.md  V2EX.md  finquant_cli.py  pyproject.toml  requirements.txt  test_finquant.py  test_position.py
.github/workflows/: deploy.yml  test.yml
docs/: docusaurus.config.js
examples/: 01_basic.py  02_custom_strategy.py  03_risk.py  04_optimize.py  05_advanced.py  06_trading.py  07_full_test.py  08_multi_assets_test.py  09_websocket_trading.py  10_live_trading.py  basic_example.py
finquant/: __init__.py  api.py  data.py  engine.py  optimize.py  result.py  strategies.py
finquant/console/: config_store.py
finquant/core/: __init__.py  broker.py  engine.py  event.py  multi_asset.py
finquant/data/: __init__.py  cache.py  factors.py  loader.py
finquant/optimize/: __init__.py  bayesian.py  sensitivity.py  walkforward.py
finquant/research/: lab.py
finquant/risk/: __init__.py  execution.py  manager.py
finquant/strategy/: __init__.py  base.py  composite.py  v2.py
finquant/trading/: __init__.py  portfolio.py  publisher.py  signal.py  signal_bus.py
finquant/trading/broker/: __init__.py  base.py  eastmoney.py  websocket.py
finquant/trading/handlers/: __init__.py
finquant/visualize/: __init__.py
tests/: __init__.py  conftest.py  test_all.py  test_analysis.py  test_comparison.py  test_limit_suspension.py  test_performance.py  test_risk.py  test_slippage.py
