[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finquant"
version = "0.1.0"
description = "轻量级量化回测工具 - 纯 Python 脚本，无需服务端和数据缓存"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MeepoQuant", email = "contact@meepoquant.com"}
]
keywords = ["quantitative", "trading", "backtest", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Homepage = "https://meepoquant.com"
Documentation = "https://finquant.readthedocs.io"
Repository = "https://github.com/meepo-quant/finquant"

[tool.setuptools.packages.find]
where = ["."]
include = ["finquant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
